# castep_outputs_tools

./: LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  ruff.yml  test_castep_outputs.yml
castep_outputs_tools/: __init__.py  md_to_h5md.py
docs/source/: conf.py  index.rst
docs/source/api/: castep_outputs_tools.rst  modules.rst
docs/source/tools/: md_to_h5md.rst  tools.rst
test/: test_md_to_h5md.py
